# rew2streammagic

./: .pre-commit-config.yaml  README.md  pyproject.toml
rew2streammagic/: main.py
